fix: rearrange swagger doc tags for better readability
